--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@polar-sh/sdk": "^0.32.16",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-progress": "^1.1.4",
@@ -75,6 +75,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^2.0.3",
     "uploadthing": "^7.6.0",
+    "vaul": "^1.1.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
