--- a/package.json
+++ b/package.json
@@ -12,26 +12,37 @@
     "@ai-sdk/openai": "^1.3.22",
     "@aws-sdk/client-s3": "^3.800.0",
     "@clerk/nextjs": "^6.35.2",
-    "@hookform/resolvers": "^5.0.1",
+    "@hookform/resolvers": "^5.2.2",
     "@icons-pack/react-simple-icons": "^12.7.0",
     "@neondatabase/serverless": "^1.0.0",
     "@polar-sh/better-auth": "^1.0.1",
     "@polar-sh/sdk": "^0.32.16",
-    "@radix-ui/react-avatar": "^1.1.7",
-    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.12",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-progress": "^1.1.4",
-    "@radix-ui/react-select": "^2.2.2",
-    "@radix-ui/react-separator": "^1.1.4",
-    "@radix-ui/react-slider": "^1.3.2",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.2",
-    "@radix-ui/react-tabs": "^1.1.9",
-    "@radix-ui/react-toggle": "^1.1.9",
-    "@radix-ui/react-toggle-group": "^1.1.10",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@shikijs/transformers": "^3.3.0",
     "@tabler/icons-react": "^3.34.0",
@@ -45,14 +56,17 @@
     "better-auth": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "color": "^5.0.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
+    "embla-carousel-react": "^8.6.0",
     "form-data": "^4.0.2",
     "framer-motion": "^12.12.1",
+    "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.503.0",
+    "lucide-react": "^0.554.0",
     "motion": "^12.10.5",
     "nanoid": "^5.1.5",
     "next": "15.3.1",
@@ -62,21 +76,22 @@
     "posthog-node": "^4.18.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.1",
+    "react-hook-form": "^7.66.1",
     "react-markdown": "^10.1.0",
-    "react-resizable-panels": "^2.1.8",
-    "recharts": "^2.15.3",
+    "react-resizable-panels": "^3.0.6",
+    "recharts": "2.15.4",
     "remark-gfm": "^4.0.1",
     "shiki": "^3.3.0",
     "slug": "^11.0.0",
-    "sonner": "^2.0.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^2.0.3",
     "uploadthing": "^7.6.0",
     "vaul": "^1.1.2",
-    "zod": "^3.24.3"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
