--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -72,6 +72,7 @@
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
+    "postgres": "^3.4.7",
     "posthog-js": "^1.248.1",
     "posthog-node": "^4.18.0",
     "qrcode.react": "^4.2.0",
