--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/react": "^2.0.98",
     "@aws-sdk/client-s3": "^3.800.0",
     "@clerk/nextjs": "^6.35.2",
     "@hookform/resolvers": "^5.2.2",
@@ -81,6 +82,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.66.1",
     "react-markdown": "^10.1.0",
+    "react-phone-number-input": "^3.4.14",
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
     "remark-gfm": "^4.0.1",
