--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "NODE_NO_WARNINGS=1 next dev ",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.24",
-    "@ai-sdk/react": "^2.0.100",
-    "@aws-sdk/client-s3": "^3.937.0",
-    "@clerk/nextjs": "^6.35.4",
+    "@ai-sdk/react": "^2.0.102",
+    "@aws-sdk/client-s3": "^3.940.0",
+    "@clerk/nextjs": "^6.35.5",
     "@hookform/resolvers": "^5.2.2",
     "@icons-pack/react-simple-icons": "^12.9.0",
     "@neondatabase/serverless": "^1.0.2",
     "@polar-sh/better-auth": "^1.5.0",
     "@polar-sh/sdk": "^0.32.16",
-    "@prisma/adapter-neon": "^7.0.0",
-    "@prisma/adapter-pg": "^7.0.0",
-    "@prisma/client": "^7.0.0",
+    "@prisma/adapter-neon": "^7.0.1",
+    "@prisma/adapter-pg": "^7.0.1",
+    "@prisma/client": "^7.0.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -51,14 +51,14 @@
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@shikijs/transformers": "^3.15.0",
     "@tabler/icons-react": "^3.35.0",
-    "@tanstack/react-query": "^5.90.10",
+    "@tanstack/react-query": "^5.90.11",
     "@uploadthing/react": "^7.3.3",
     "@vercel/analytics": "^1.5.0",
     "@walletpass/pass-js": "^6.9.1",
     "ai": "^4.3.19",
     "apn": "^2.2.0",
     "balloons-js": "^0.0.3",
-    "better-auth": "^1.4.1",
+    "better-auth": "^1.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -73,15 +73,15 @@
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
     "nanoid": "^5.1.6",
-    "next": "15.3.1",
+    "next": "16.0.4",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
-    "posthog-js": "^1.297.2",
+    "posthog-js": "^1.298.0",
     "posthog-node": "^4.18.0",
     "qrcode.react": "^4.2.0",
-    "react": "^19.2.0",
+    "react": "19.2.0",
     "react-day-picker": "^9.11.2",
-    "react-dom": "^19.2.0",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "react-markdown": "^10.1.0",
     "react-phone-number-input": "^3.4.14",
@@ -97,21 +97,25 @@
     "uploadthing": "^7.7.4",
     "vaul": "^1.1.2",
     "ws": "^8.18.3",
-    "zod": "^4.1.12"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/lodash": "^4.17.21",
     "@types/node": "^20.19.25",
-    "@types/react": "^19.2.6",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "@types/slug": "^5.0.9",
     "eslint": "^9.39.1",
-    "eslint-config-next": "15.3.1",
-    "prisma": "^7.0.0",
+    "eslint-config-next": "16.0.4",
+    "prisma": "^7.0.1",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
