feat: Implement faculty class management for grades and announcements, integrate R2 storage, and refresh the UI theme.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,12 @@
   "scss.lint.unknownAtRules": "ignore",
   "files.associations": {
     "*.css": "tailwindcss"
+  },
+  "workbench.colorCustomizations": {
+    "editorCursor.foreground": "#ef857d",
+    "activityBarBadge.background": "#e9dbb7",
+    "activityBarBadge.foreground": "#262626",
+    "statusBar.background": "#9f5a51",
+    "statusBar.foreground": "#e9dbb7"
   }
 }
