--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "cmdk": "^1.1.1",
     "color": "^5.0.3",
     "date-fns": "^4.1.0",
+    "express": "^4.21.2",
     "dotenv": "^16.6.1",
     "embla-carousel-react": "^8.6.0",
     "form-data": "^4.0.5",
@@ -78,11 +79,13 @@
     "pg": "^8.16.3",
     "posthog-js": "^1.298.1",
     "posthog-node": "^4.18.0",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
+    "ws": "^8.18.3",
     "react": "19.2.0",
     "react-day-picker": "^9.11.2",
     "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.1",
+    "react-hook-form": "^7.67.0",
     "react-markdown": "^10.1.0",
     "react-phone-number-input": "^3.4.14",
     "react-resizable-panels": "^3.0.6",
@@ -96,11 +99,10 @@
     "ua-parser-js": "^2.0.6",
     "uploadthing": "^7.7.4",
     "vaul": "^1.1.2",
-    "ws": "^8.18.3",
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/eslintrc": "^3.3.3",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/lodash": "^4.17.21",
     "@types/node": "^20.19.25",
@@ -109,7 +111,9 @@
     "@types/slug": "^5.0.9",
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.4",
+    "internal-ip": "^8.0.1",
     "prisma": "^7.0.1",
+    "qrcode-terminal": "^0.12.0",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
