feat: Migrate backend API to Elysia framework with Next.js integration
- Implemented Elysia as the backend framework for the API.
- Created a catch-all route for API endpoints in `app/api/[[...slugs]]/route.ts`.
- Developed a type-safe API client using Eden Treaty in `lib/api-client.ts`.
- Updated `server/index.ts` to include all necessary routes.
- Added authentication helpers in `server/lib/auth.ts`.
- Defined various API routes for students, faculty, schedule, academic periods, chat, and debug functionalities.
- Implemented error handling and response utilities for better API responses.
- Documented the API structure and usage in `server/README.md`.
- Ensured all endpoints maintain the same URLs and behavior as before.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/react": "^2.0.104",
     "@aws-sdk/client-s3": "^3.940.0",
     "@clerk/nextjs": "^6.35.5",
+    "@elysiajs/eden": "^1.4.5",
     "@hookform/resolvers": "^5.2.2",
     "@icons-pack/react-simple-icons": "^12.9.0",
     "@neondatabase/serverless": "^1.0.2",
@@ -64,9 +65,10 @@
     "cmdk": "^1.1.1",
     "color": "^5.0.3",
     "date-fns": "^4.1.0",
-    "express": "^4.21.2",
     "dotenv": "^16.6.1",
+    "elysia": "^1.4.16",
     "embla-carousel-react": "^8.6.0",
+    "express": "^4.21.2",
     "form-data": "^4.0.5",
     "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
@@ -81,7 +83,6 @@
     "posthog-node": "^4.18.0",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
-    "ws": "^8.18.3",
     "react": "19.2.0",
     "react-day-picker": "^9.11.2",
     "react-dom": "19.2.0",
@@ -99,6 +100,7 @@
     "ua-parser-js": "^2.0.6",
     "uploadthing": "^7.7.4",
     "vaul": "^1.1.2",
+    "ws": "^8.18.3",
     "zod": "^4.1.13"
   },
   "devDependencies": {
