feat: Integrate Laravel API for faculty dashboard and class data, replacing direct Prisma queries.

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@types/slug": "^5.0.9",
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.4",
     "internal-ip": "^8.0.1",
