feat: add student details retrieval endpoint and client method
- Implemented a new endpoint in the server to fetch student details by ID.
- Added error handling for authentication and API response errors.
- Introduced a method in the LaravelApiClient to request student details.
- Updated package.json to include jspdf and xlsx dependencies.

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "form-data": "^4.0.5",
     "framer-motion": "^12.23.25",
     "input-otp": "^1.4.2",
+    "jspdf": "^3.0.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.555.0",
     "motion": "^12.23.25",
@@ -101,6 +102,7 @@
     "uploadthing": "^7.7.4",
     "vaul": "^1.1.2",
     "ws": "^8.18.3",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.13"
   },
   "devDependencies": {
