feat: Implement class view mode toggle and introduce a new ModernClassCard component while removing the Prisma schema.

--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,6 @@ CLERK_SECRET_KEY=sk_test_vIymxh7IUFLUioodfkj0EaZA4Wvv8sC9rCpCC5z8r4
 # Set to 'true' to enable waitlist mode on landing page, 'false' to redirect to sign-in
 NEXT_PUBLIC_CLERK_WAITLIST_ENABLED=false
 
+
+DCCP_API_TOKEN=""
+DCCP_API_URL=https://admin.dccp.edu.ph
